# fhir-server

./: .dockerignore  .gitignore  AUTHENTICATION.md  Cargo.toml  Dockerfile  GRPC.md  QUICKSTART.md  README.md  build.rs  env.example  setup_database.sh  update_handlers.sh
docs/: grpc_quick_reference.md  grpc_reflection.md  grpc_tls_setup.md  kubernetes_deployment.md
helm/: QUICK_START.md
helm/fhir-server/: .helmignore  Chart.yaml  README.md  values-development.yaml  values-production.yaml  values.yaml
helm/fhir-server/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress-grpc.yaml  ingress-http.yaml  pdb.yaml  secret.yaml  service-grpc.yaml  service-http.yaml  serviceaccount.yaml
proto/: fhir.proto
scripts/: generate_certs.sh
src/: config.rs  lib.rs  main.rs
src/api/: README.md  auth.rs  mod.rs  responses.rs  router.rs
src/api/handlers/: auth_handlers.rs  common.rs  condition.rs  encounter.rs  mod.rs  observation.rs  patient.rs
src/domain/: datatypes.rs  errors.rs  mod.rs  primitives.rs
src/domain/resources/: condition.rs  encounter.rs  mod.rs  observation.rs  patient.rs
src/grpc/: auth.rs  converters.rs  mod.rs  server.rs  services.rs
src/migrations/: 001_initial_schema.sql
src/repository/: condition_repository.rs  encounter_repository.rs  mod.rs  observation_repository.rs  patient_repository.rs
src/service/: authorization.rs  authorization_rules.rs  condition_service.rs  encounter_service.rs  mod.rs  observation_service.rs  patient_service.rs  validation.rs
