[package]
name = "fhir-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "json",
    "chrono",
    "uuid",
    "macros"
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Async traits
async-trait = "0.1"

# Tracing/Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenvy = "0.15"

# Authentication
jsonwebtoken = "9.0"
bcrypt = "0.15"
axum-extra = { version = "0.9", features = ["typed-header"] }

# gRPC
tonic = { version = "0.11", features = ["tls"] }
tonic-reflection = "0.11"
prost = "0.12"

[build-dependencies]
tonic-build = { version = "0.11", features = ["prost"] }
prost-build = "0.12"

[dev-dependencies]
# Testing
tokio-test = "0.4"